package com.company;

public class Decimal extends Numero {
    public Decimal(String variable) {
        super(variable);
    }




}
